[package]
name = "webtoonDownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Optimize Options
[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
iced =  { version = "0.4", features = ["image"] }
iced_native = "0.4"
reqwest = { version = "0.11.11", features = ["blocking"] }
winapi = "0.2.7"
user32-sys = "0.2.0"
tokio = { version = "1.20.1", features = ["full"] }